<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/info_window"
        android:background="@drawable/info_bg"

        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/instagram"
            android:layout_marginTop="6dp"
            android:id="@+id/iv_info"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_info"
            android:text="@string/info_window_title"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:id="@+id/text1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_below="@+id/text1"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            android:id="@+id/view1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingRight="6dp"
            android:paddingLeft="10dp"

            android:layout_below="@+id/view1"
            android:layout_marginTop="5dp"
            android:text="@string/distance"
            android:id="@+id/text2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"


            android:layout_toRightOf="@+id/text2"
            android:layout_alignBottom="@+id/text2"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:id="@+id/text3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"


            android:layout_below="@+id/text2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/budget"
            android:id="@+id/text5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"


            android:layout_toRightOf="@+id/text5"
            android:layout_alignBottom="@+id/text5"


            android:layout_marginTop="5dp"

            android:text="@string/rupee_sign"
            android:id="@+id/text10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"


            android:layout_toRightOf="@+id/text10"
            android:layout_alignBottom="@+id/text10"
            android:layout_marginTop="5dp"

            android:text="@string/min"
            android:id="@+id/text6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/AppColor"


            android:layout_toRightOf="@+id/text6"
            android:layout_alignBottom="@+id/text6"


            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/hypen"
            android:id="@+id/text7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"


            android:layout_toRightOf="@+id/text7"
            android:layout_alignBottom="@+id/text7"

            android:layout_marginLeft="5dp"

            android:layout_marginTop="5dp"
            android:text="@string/rupee_sign"
            android:id="@+id/text8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_toRightOf="@+id/text8"
            android:layout_alignBottom="@+id/text8"
            android:layout_marginTop="5dp"
            android:text="@string/max"
            android:id="@+id/text9"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/text4"

            android:layout_height="wrap_content"



            android:textColor="@android:color/white"

            android:text="@string/bid"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:layout_below="@+id/text5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:background="@drawable/info_bg"
            android:textSize="25sp"
            android:layout_marginBottom="6dp"

            />


    </RelativeLayout>

</RelativeLayout>