<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rllogin"

    tools:context="mypocketvakil.example.com.letmenotify.Login">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/image2"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit1"
        android:hint="@string/edit1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:singleLine="true"
        android:textAlignment="center"



        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/edit1"
        android:singleLine="true"
        android:textAlignment="center"
        />


    <RelativeLayout
        android:id="@+id/relativemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_alignTop="@+id/password"
        android:layout_toRightOf="@+id/button1"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/eye"
            />
    </RelativeLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/button1"
        android:text="@string/button1"
        android:paddingRight="80dp"
        android:paddingLeft="80dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/password"
        android:layout_marginLeft="90dp"

        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:gravity="center"
        android:text="Forgot Password?"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="16dp"

        />

    <RelativeLayout
        android:id="@+id/relative3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/text1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:paddingTop="5dp"
            android:paddingLeft="16dp"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/holo_blue_dark"
            android:paddingBottom="16dp"
            android:paddingRight="16dp"
            android:onClick="sendMessage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_toRightOf="@+id/no_account"

            android:layout_alignParentRight="true"
            android:paddingBottom="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:id="@+id/enter"
            android:text="@string/signup"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp"

            android:layout_marginLeft="20dp"


            android:layout_alignBottom="@+id/no_account" />





    </RelativeLayout>

</RelativeLayout>