<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlsignup"

    tools:context="mypocketvakil.example.com.letmenotify.Sign_Up">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupimage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@id/signupimage"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:hint="Full Name"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/full_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email"
        android:textAlignment="center"

        android:textSize="20dp"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:id="@+id/signuppassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>
    <RelativeLayout
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/signuppassword"
        android:layout_alignTop="@+id/signuppassword"
        android:layout_toRightOf="@+id/signupbutton"
        android:layout_alignRight="@+id/signuppassword"
        android:layout_alignEnd="@+id/signuppassword"
        android:id="@+id/signuprelative">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/eyeimage"/>
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupbutton"
        android:text="@string/signupbutton"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/signuppassword"
        android:layout_marginLeft="90dp"
        android:onClick="sendQuery"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="20dp"
        />


</RelativeLayout>
